  - Update namespace validation to forbid reserved names (.git and .atom) (Will Starms)
  - Add word-wrap to issue title on issue and milestone boards (ClemMakesApps)
  - Fix todos page mobile viewport layout (ClemMakesApps)
  - Fix inconsistent highlighting of already selected activity nav-links (ClemMakesApps)
  - Remove redundant mixins (ClemMakesApps)
  - Fix robots.txt disallowing access to groups starting with "s" (Matt Harrison)
  - Close open merge request without source project (Katarzyna Kobierska Ula Budziszewska)
  - Fix that manual jobs would no longer block jobs in the next stage. !6604
  - Add configurable email subject suffix (Fu Xu)
  - Added tooltip to fork count on project show page. (Justin DiPierro)
  - Use a ConnectionPool for Rails.cache on Sidekiq servers
  - Replace `alias_method_chain` with `Module#prepend`
  - Enable GitLab Import/Export for non-admin users.
  - Preserve label filters when sorting !6136 (Joseph Frazier)
  - MergeRequest#new form load diff asynchronously
  - Only update issuable labels if they have been changed
  - Take filters in account in issuable counters. !6496
  - Use custom Ruby images to test builds (registry.dev.gitlab.org/gitlab/gitlab-build-images:*)
  - Prevent flash alert text from being obscured when container is fluid
  - Append issue template to existing description !6149 (Joseph Frazier)
  - Trending projects now only show public projects and the list of projects is cached for a day
  - Memoize Gitlab Shell's secret token (!6599, Justin DiPierro)
  - Revoke button in Applications Settings underlines on hover.
  - Use higher size on Gitlab::Redis connection pool on Sidekiq servers
  - Add missing values to linter !6276 (Katarzyna Kobierska Ula Budziszewska)
  - Fix Long commit messages overflow viewport in file tree
  - Revert avoid touching file system on Build#artifacts?
  - Stop using a Redis lease when updating the project activity timestamp whenever a new event is created