@@ -9,6 +9,7 @@
     .file-actions
       = clipboard_button(clipboard_target: ".blob-content[data-blob-id='#{@snippet.id}']")
       = link_to 'Raw', raw_snippet_path(@snippet), class: "btn btn-sm", target: "_blank"
+      = link_to 'Download', download_snippet_path(@snippet), class: "btn btn-sm"
   = render 'shared/snippets/blob'
 
 = render 'award_emoji/awards_block', awardable: @snippet, inline: true
